--- a/HTML file/Login.html
+++ b/HTML file/Login.html
@@ -17,5 +17,6 @@
         <input type="password"><br> <br>
         <input type="submit" name="" id="">
     </form>
+    <footer>footer</footer>
 </body>
 </html>
